Cambios en deck y carddeck