@@ -6,6 +6,7 @@ import com.setcollectormtg.setcollectormtg.exception.ResourceNotFoundException;
 import com.setcollectormtg.setcollectormtg.mapper.DeckMapper;
 import com.setcollectormtg.setcollectormtg.model.Deck;
 import com.setcollectormtg.setcollectormtg.model.User;
+import com.setcollectormtg.setcollectormtg.repository.CardDeckRepository;
 import com.setcollectormtg.setcollectormtg.repository.DeckRepository;
 import com.setcollectormtg.setcollectormtg.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
@@ -13,7 +14,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,6 +21,7 @@ public class DeckServiceImpl implements DeckService {
 
     private final DeckRepository deckRepository;
     private final UserRepository userRepository;
+    private final CardDeckRepository cardDeckRepository;
     private final DeckMapper deckMapper;
 
     @Override
@@ -28,13 +29,13 @@ public class DeckServiceImpl implements DeckService {
     public List<DeckDto> getAllDecks() {
         return deckRepository.findAll().stream()
                 .map(deckMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public DeckDto getDeckById(Long id) {
-        return deckRepository.findById(id)
+       return deckRepository.findById(id)
                 .map(deckMapper::toDto)
                 .orElseThrow(() -> new ResourceNotFoundException("Deck not found with id: " + id));
     }
@@ -42,6 +43,11 @@ public class DeckServiceImpl implements DeckService {
     @Override
     @Transactional
     public DeckDto createDeck(DeckCreateDto deckCreateDto) {
+        // Verificar si ya existe un deck con el mismo nombre para este usuario
+        if (deckRepository.existsByDeckNameAndUser_UserId(deckCreateDto.getDeckName(), deckCreateDto.getUserId())) {
+            throw new IllegalArgumentException("Deck with name '" + deckCreateDto.getDeckName() + "' already exists for this user");
+        }
+
         User user = userRepository.findById(deckCreateDto.getUserId())
                 .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + deckCreateDto.getUserId()));
 
@@ -56,6 +62,13 @@ public class DeckServiceImpl implements DeckService {
         Deck existingDeck = deckRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Deck not found with id: " + id));
 
+        // Verificar si el nuevo nombre ya existe para otro deck del mismo usuario
+        if (!existingDeck.getDeckName().equals(deckDto.getDeckName()) &&
+                deckRepository.existsByDeckNameAndUser_UserId(deckDto.getDeckName(), deckDto.getUserId())) {
+            throw new IllegalArgumentException("Deck with name '" + deckDto.getDeckName() + "' already exists for this user");
+        }
+
+        // Actualizar campos básicos
         existingDeck.setDeckName(deckDto.getDeckName());
         existingDeck.setGameType(deckDto.getGameType());
         existingDeck.setDeckColor(deckDto.getDeckColor());
@@ -77,14 +90,27 @@ public class DeckServiceImpl implements DeckService {
     public void deleteDeck(Long id) {
         Deck deck = deckRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Deck not found with id: " + id));
+
+        // Verificar si hay cartas asociadas usando CardDeckRepository
+        if (cardDeckRepository.existsByDeck_DeckId(id)) {
+            throw new IllegalStateException("Cannot delete deck with id " + id +
+                    " because it contains cards. Remove cards first.");
+        }
+
         deckRepository.delete(deck);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<DeckDto> getDecksByUser(Long userId) {
-        return deckRepository.findByUserId(userId).stream()
+        return deckRepository.findByUser_UserId(userId).stream()
                 .map(deckMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public int getCardCountInDeck(Long deckId) {
+        return cardDeckRepository.countByDeck_DeckId(deckId);
     }
 }
